--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ p {
     background-color: #FFF8F0;
     display: flex;
     flex-direction: column;
-    min-height: 250px;
+    min-height: 300px;
     justify-content: center;
     align-items: center;
 }
@@ -100,12 +100,27 @@ p {
     
 }
 
+.sign-up-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 300px;
+}
 .sign-up {
     background-color: #C97C5D;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
+    max-width: 1200px;
+    margin: 100px ;
 }
 
 .footer {
     background-color: #3B2F2F;
+    min-height: 75px;
 }
 
 h1 {
