--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background-color: burlywood;
     display: flex;
     flex-direction: column;
+    margin: 0;
+    height: 100%;
 }
 
 img {
@@ -101,10 +103,12 @@ p {
 }
 
 .sign-up-section {
+    /* border: solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 300px;
+    max-height: 300px;
+
 }
 .sign-up {
     background-color: #C97C5D;
@@ -115,6 +119,7 @@ p {
     flex-grow: 1;
     width: 100%;
     max-width: 1200px;
+    max-height: 125px;
     margin: 100px ;
 }
 
